--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.0.1
 requests==2.26.0
 pandas==1.3.3
+joblib==1.1.0  # Replace with the desired version of joblib
 # Add other dependencies as needed
