--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ Flask==2.0.1
 requests==2.26.0
 pandas==1.3.3
 joblib==1.1.0  # Replace with the desired version of joblib
+scikit-learn==0.24.2  # Replace with the desired version of scikit-learn
 # Add other dependencies as needed
