--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.0.1
 requests==2.26.0
 pandas==1.3.3
-joblib==1.2.1  # Replace with the desired version of joblib
+joblib>=0.14.0  # Use a version that you know is available (e.g., >=0.14.0)
+
 scikit-learn==0.24.2  # Replace with the desired version of scikit-learn
 # Add other dependencies as needed
+
