--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,14 @@ Flask==2.0.1
 requests==2.26.0
 pandas==1.3.3
 joblib>=0.14.0  # Use a version that you know is available (e.g., >=0.14.0)
-
+click==8.1.3
+gunicorn==20.1.0
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.2.2
+zipp==3.10.0
 scikit-learn==0.24.2  # Replace with the desired version of scikit-learn
 # Add other dependencies as needed
 
